[package]
name = "enchanter"
version = "0.1.0"
edition = "2024"
authors = ["Keegan Bowen <carefuldata@protonmail.com>"]
license = "MIT"
description = "XChaCha20Poly1305 AEAD file encryption tool"
homepage = "https://carefuldata.com"
repository = "https://github.com/jpegleg/enchanter"
readme = "README.md"
categories = ["cryptography"]
keywords = ["xchacha20", "file-encryption", "cli", "encryption", "chacha20poly1305"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
rpassword = "7.4.0"
rand = "0.9.1"
sha3 = "0.10.1"
argon2 = "0.5.1"
toml = "0.9.2"
serde = { version = "1.0.29", features = ["derive"] }
base64 = "0.22.1"
chrono = "0.4.41"
zeroize = "1.8.1"
chacha20poly1305 = { version = "0.10.1", features = ["stream"] }
